--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo:             site-logo.png
 disqus_shortname: 
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://dainiusjocas.github.io/debloat/
+url:              http://dainiusjocas.github.io/debloat
 
 # Owner/author information
 owner:
@@ -43,7 +43,7 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Vilnius
 future:      true
 pygments:    true
 markdown:    kramdown
